--- a/Index.css
+++ b/Index.css
@@ -1,5 +1,6 @@
     .myheader {
       background-color:rgb(158, 121, 157);
+      text-align: right;
     }
     .mybody{
       background-color: white(158, 121, 157);
