--- a/Index.css
+++ b/Index.css
@@ -1,6 +1,7 @@
     .myheader {
       background-color:rgb(158, 121, 157);
       text-align: right;
+      padding-right: 10px;
     }
     .mybody{
       background-color: white(158, 121, 157);
