--- a/Index.css
+++ b/Index.css
@@ -4,7 +4,7 @@
       padding-right: 15px;
     }
     .mybody{
-      background-color: grey(158, 121, 157);
+      background-color: white(231, 225, 231);
     }
     .myfooter{
       background-color:rgb(110, 41, 110);
