--- a/Index.css
+++ b/Index.css
@@ -7,9 +7,12 @@
       background-color: rgb(235, 230, 230);
     }
     h1{
-      color : blue
+      color : rgb(44, 1, 80)
     }
     .myfooter{
       background-color:rgb(110, 41, 110);
       text-align: center;
     }
+  h1{
+    color : rgb(44, 1, 80)
+  }
