--- a/Index.css
+++ b/Index.css
@@ -6,6 +6,10 @@
     .mybody{
       background-color: rgb(235, 230, 230);
     }
+    #logo {
+      max-width: 40px;
+      height: 50px;
+    }
     .mybody h1{
       color : rgb(187, 135, 229)
     }
@@ -13,4 +17,4 @@
       background-color:rgb(110, 41, 110);
       text-align: center;
     }
-
+   
