--- a/Index.css
+++ b/Index.css
@@ -2,6 +2,7 @@
       background-color:rgb(158, 121, 157);
       text-align: right;
       padding-right: 15px;
+      padding-bottom: 10px;
     }
     .mybody{
       background-color: rgb(235, 230, 230);
