--- a/Index.css
+++ b/Index.css
@@ -1,15 +1,22 @@
-    .myheader {
+    header {
+      display: flex;
       background-color:rgb(158, 121, 157);
       text-align: right;
-      padding-right: 15px;
-      padding-bottom: 10px;
+      padding: 15px;
+      align-items: center;
+      justify-content: center;
     }
+    header a{
+      padding: 10px;
+    }
+
     .mybody{
       background-color: rgb(235, 230, 230);
     
     }
 
     #logo {
+      padding-right: 50%;
       max-width: 40px;
       height: 50px;
     }
