--- a/Index.css
+++ b/Index.css
@@ -34,7 +34,7 @@
       font-family:Georgia, 'Times New Roman', Times, serif;
     }
     
-    .progetti{
+    #progetti{
       color : rgb(44, 1, 80);
       background-color: rgb(46, 155, 51)
     }
@@ -44,6 +44,7 @@
       display: flex;
       flex-direction: row;
       gap: 80px;
+      font-family:Georgia, 'Times New Roman', Times, serif;
     }
 
     .myfooter{
