--- a/Index.css
+++ b/Index.css
@@ -34,17 +34,16 @@
       font-family:Georgia, 'Times New Roman', Times, serif;
     }
     
-    #progetti{
-      color : rgb(44, 1, 80);
-      background-color: rgb(46, 155, 51)
-    }
     
     .info{ 
       background-color: rgb(235, 230, 230); 
       display: flex;
       flex-direction: row;
-      gap: 80px;
-      font-family:Georgia, 'Times New Roman', Times, serif;
+      gap: 200px;
+    }
+
+    #form{
+     padding-left: 200px;
     }
 
     .myfooter{
