--- a/Index.css
+++ b/Index.css
@@ -40,6 +40,8 @@
       display: flex;
       flex-direction: row;
       gap: 200px;
+      padding-left: 50%;
+      padding right: 50%;
     }
 
     #form{
@@ -56,5 +58,5 @@
       color:white;
       font-family: Georgia, 'Times New Roman', Times, serif;
     }
-    
+
   
