--- a/Index.css
+++ b/Index.css
@@ -21,7 +21,7 @@
       font-family:Georgia, 'Times New Roman', Times, serif;
     }
 
-    .mybody{
+    .chisono{
       background-color: rgb(235, 230, 230);
       text-align: right;
       padding-bottom: 10px;
@@ -29,11 +29,15 @@
       padding-left: 25px;
     }
 
-    .mybody h2{
+    #body h2{
       color : rgb(44, 1, 80);
       font-family:Georgia, 'Times New Roman', Times, serif;
     }
     
+    .progetti{
+      text-align: center;
+      background-color: rgb(235, 230, 230);
+    } 
     
     .info{ 
       background-color: rgb(235, 230, 230); 
