--- a/Index.css
+++ b/Index.css
@@ -29,7 +29,7 @@
       padding-left: 25px;
     }
 
-    #body h2{
+    body h2{
       color : rgb(44, 1, 80);
       font-family:Georgia, 'Times New Roman', Times, serif;
     }
@@ -38,7 +38,7 @@
       text-align: center;
       background-color: rgb(235, 230, 230);
     } 
-    
+
     .info{ 
       background-color: rgb(235, 230, 230); 
       display: flex;
