--- a/Index.css
+++ b/Index.css
@@ -43,11 +43,13 @@
       background-color: rgb(235, 230, 230); 
       display: flex;
       flex-direction: row;
+      align-items: center;
       gap: 200px;
       padding-left: 20%;
       padding right: 20%;
     }
 
+  
     #form{
       background-color: rgb(235, 230, 230);
       text-align: center;
