--- a/Index.css
+++ b/Index.css
@@ -24,9 +24,9 @@
     .chisono{
       background-color: rgb(235, 230, 230);
       text-align: right;
+      padding-right: 15px;
+      padding-left: 35px;
       padding-bottom: 10px;
-      padding-right: 10px;
-      padding-left: 25px;
     }
 
     body h2{
@@ -46,10 +46,9 @@
       align-items: center;
       gap: 200px;
       padding-left: 20%;
-      padding right: 20%;
+      padding-right: 20%;
     }
 
-  
     #form{
       background-color: rgb(235, 230, 230);
       text-align: center;
