--- a/Index.css
+++ b/Index.css
@@ -31,6 +31,7 @@
 
     body h2{
       color : rgb(44, 1, 80);
+      font-size: 35px;
       font-family:Georgia, 'Times New Roman', Times, serif;
     }
     
@@ -47,6 +48,10 @@
       gap: 200px;
       padding-left: 20%;
       padding-right: 20%;
+    }
+
+    .info a{
+      color: rgb(0, 0, 0);
     }
 
     #form{
