--- a/Index.css
+++ b/Index.css
@@ -27,7 +27,18 @@
       padding-right: 15px;
       padding-left: 30px;
       padding-bottom: 10px;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      gap: 200px;
+      padding-left: 20%;
+      padding-right: 20%;
     }
+
+    .chisono img{
+      width: 225px;
+      height: 300px;
+    } 
 
     body h2{
       color : rgb(44, 1, 80);
