--- a/Index.css
+++ b/Index.css
@@ -24,8 +24,8 @@
     .chisono{
       background-color: rgb(235, 230, 230);
       text-align: right;
-      padding-right: 15px;
-      padding-left: 30px;
+      padding-right: 10%;
+      padding-left: 15%;
       padding-bottom: 10px;
       display: flex;
       flex-direction: row;
