--- a/Index.css
+++ b/Index.css
@@ -25,8 +25,9 @@
       background-color: rgb(235, 230, 230);
       text-align: right;
       padding-right: 10%;
-      padding-left: 15%;
+      padding-left: 10%;
       padding-bottom: 10px;
+      padding-top: 5%;
       display: flex;
       flex-direction: row;
       align-items: center;
