--- a/Index.css
+++ b/Index.css
@@ -27,7 +27,6 @@
       padding-right: 10%;
       padding-left: 10%;
       padding-bottom: 10px;
-      padding-top: 5%;
       display: flex;
       flex-direction: row;
       align-items: center;
@@ -37,7 +36,7 @@
     .chisono img{
       width: 225px;
       height: 300px;
-      padding-bottom: 10px;
+      padding-bottom: 5%;
     } 
 
     body h2{
