--- a/Index.css
+++ b/Index.css
@@ -36,7 +36,7 @@
     .chisono img{
       width: 225px;
       height: 300px;
-      padding-bottom: 5%;
+      align-items: center;
     } 
 
     body h2{
