--- a/Index.css
+++ b/Index.css
@@ -36,7 +36,7 @@
     .chisono img{
       width: 225px;
       height: 300px;
-      align-items: center;
+      padding-top: 4%;
     } 
 
     body h2{
