--- a/Index.css
+++ b/Index.css
@@ -1,4 +1,9 @@
-  header {
+body {
+  margin: 0;
+  padding: 0;
+}
+
+ header {
       display: flex;
       flex-direction: row;
       background-color:rgb(158, 121, 157);
@@ -75,6 +80,7 @@
     .myfooter{
       background-color:rgb(110, 41, 110);
       text-align: center;
+      padding: 3px;
       color:white;
       font-family: Georgia, 'Times New Roman', Times, serif;
     }
