--- a/Index.css
+++ b/Index.css
@@ -78,7 +78,8 @@ header {
       height: 250px;
     }
 
-    .info{ 
+    .info{
+      font-family: Georgia, 'Times New Roman', Times, serif; 
       background-color: rgb(170, 129, 170); 
       display: flex;
       flex-direction: row;
