--- a/Index.css
+++ b/Index.css
@@ -7,6 +7,7 @@ body h2{
   color : rgb(44, 1, 80);
   font-size: 35px;
   font-family:Georgia, 'Times New Roman', Times, serif;
+  text-shadow: violet 0 0 10px;
 }
 
 header {
