--- a/Index.css
+++ b/Index.css
@@ -5,7 +5,7 @@ body {
 
 body h2{
   color : rgb(44, 1, 80);
-  font-size: 35px;
+  font-size: 2em;
   font-family:Georgia, 'Times New Roman', Times, serif;
   text-shadow: violet 0 0 10px;
 }
@@ -42,13 +42,14 @@ header {
       display: flex;
       flex-direction: row;
       align-items: center;
-      gap: 200px;
+      gap: 50px;
       font-family:Georgia, 'Times New Roman', Times, serif;
     }
 
     .chisono img{
-      width: 337px;
-      height: 450px;
+      width: 100%;
+      height: auto;
+      max-width: 337px;
       padding-top: 4%;
     } 
 
@@ -60,8 +61,9 @@ header {
     } 
 
     #foto1{
-      width: 400px;
-      height: 250px;
+      width: 100%;
+      height: auto;
+      max-width: 400px;
     }
 
     #testo1{
@@ -75,8 +77,9 @@ header {
     } 
 
     #foto2{
-      width: 400px;
-      height: 250px;
+      width: 100%; /* Imposta la larghezza al 100% per l'immagine */
+      height: auto; /* Mantiene il rapporto d'aspetto */
+      max-width: 400px;
     }
 
     .info{
@@ -85,9 +88,9 @@ header {
       display: flex;
       flex-direction: row;
       align-items: center;
-      gap: 200px;
-      padding-left: 20%;
-      padding-right: 20%;
+      gap: 50px; /* Ridotto il gap per migliorare la responsività */
+      padding-left: 10%; /* Ridotto il padding per migliorare la responsività */
+      padding-right: 10%; /* Ridotto il padding per migliorare la responsività */
     }
 
     .info a{
@@ -118,4 +121,53 @@ header {
 
   .myfooter a{
     color: white;
+  }
+
+  /* Media Queries per responsività */
+@media (max-width: 768px) {
+  .chisono {
+    flex-direction: column;
+    text-align: center;
+    padding-right: 10%;
+    padding-left: 10%;
+    gap: 20px;
+  }
+
+  .info {
+    flex-direction: column;
+    text-align: center;
+    padding-left: 5%;
+    padding-right: 5%;
+    gap: 20px;
+  }
+}
+
+@media (max-width: 480px) {
+  header {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  #menu {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .chisono img {
+    max-width: 100%; /* Assicura che l'immagine non superi la larghezza del contenitore */
+  }
+
+  .project {
+    flex-direction: column;
+  }
+
+  .project-images {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .project-images img {
+    max-width: 100px; /* Dimensioni massime ridotte per schermi piccoli */
   }
