--- a/Index.css
+++ b/Index.css
@@ -86,9 +86,9 @@ header {
       display: flex;
       flex-direction: row;
       align-items: center;
-      gap: 50px; /* Ridotto il gap per migliorare la responsività */
-      padding-left: 10%; /* Ridotto il padding per migliorare la responsività */
-      padding-right: 10%; /* Ridotto il padding per migliorare la responsività */
+      gap: 200px; /* Ridotto il gap per migliorare la responsività */
+      padding-left: 20%; /* Ridotto il padding per migliorare la responsività */
+      padding-right: 20%; /* Ridotto il padding per migliorare la responsività */
     }
 
     .info a{
@@ -137,6 +137,28 @@ header {
     padding-left: 5%;
     padding-right: 5%;
     gap: 20px;
+  }
+}
+
+@media (max-width: 768px) {
+  header {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .chisono {
+    flex-direction: column;
+    text-align: left;
+    gap: 10px;
+  }
+
+  .info {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .project {
+    flex-direction: column;
   }
 }
 
