--- a/Index.css
+++ b/Index.css
@@ -165,7 +165,7 @@ header {
 #fname {
   width: 100%;
   margin-bottom: 10px;
-  background-color: #fff;
+  background-color: #ffffff;
   padding: 10px;
   width: 35%;
   border-radius: 5px;
@@ -173,6 +173,16 @@ header {
   position:static;
   border-color:rgb(104, 100, 104)
 }
+
+#submit {background-color: #fff;
+  border-radius: 5px;
+   font-size: 15px;
+   position:static;    
+   width: 35%; 
+   padding: 5px;
+   border-color:rgb(104, 100, 104)
+   }
+  
 
 @media (max-width: 480px) {
   header {
