--- a/Index.css
+++ b/Index.css
@@ -130,6 +130,25 @@ header {
       left: 0;
     }
 
+    .button {
+      display: inline-block;
+      padding: 10px 20px;
+      background-color: #270623;
+      color: white;
+      cursor: pointer;
+  }
+
+  #popup {
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      padding: 20px;
+      background-color: #ebb1f6;
+      color: white;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  }
     .myfooter{
       background-color:rgb(110, 41, 110);
       text-align: center;
