--- a/Index.css
+++ b/Index.css
@@ -83,7 +83,22 @@ header {
   width: 400px;
   height: 225px;
 }
-   
+
+.container3 {
+  display: flex;
+  flex-direction: row;
+  gap: 100px;
+  padding-left: 20%;
+  padding-right: 20%;
+  padding-bottom: 10px;
+  font-family:Georgia, 'Times New Roman', Times, serif;
+}
+
+#foto3 {
+  width: 185px;
+  height: 300px;
+}
+
     .info{
       font-family: Georgia, 'Times New Roman', Times, serif; 
       background-color: rgb(170, 129, 170); 
