--- a/Index.css
+++ b/Index.css
@@ -51,6 +51,7 @@ header {
 .nav-links {
   display: flex;
   list-style: none;
+  margin-left: auto;
 }
 
 .nav-links a {
@@ -76,6 +77,9 @@ header {
       width: 100%;
       text-align: center;
       background-color: #333;
+      position: absolute;
+      top: 60px;
+      right: 0;
   }
 
   .nav-links a {
