--- a/Index.css
+++ b/Index.css
@@ -243,7 +243,13 @@ header {
   color: white;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  text-align: center;
 }
+
+#popup a {
+  color: white;
+  }
+
 
 .myfooter {
   background-color: rgb(110, 41, 110);
