--- a/Index.css
+++ b/Index.css
@@ -95,6 +95,8 @@ header {
       display: flex; /* Show nav links when active */
   }
 }
+
+
 .chisono {
   background-color: rgb(235, 230, 230);
   text-align: right;
@@ -187,12 +189,26 @@ header {
 #form {
   background-color: rgb(170, 129, 170);
   text-align: center;
-  padding-bottom: 10px;
-  padding-right: 10px;
-  padding-left: 25px;
+  padding: 20px;
+  border-radius: 10px;
+  max-width: 500px;
+  margin: 0 auto;
 }
 
 #fname {
+  width: 100%;
+  margin-bottom: 10px;
+  background-color: #ffffff;
+  padding: 5px;
+  width: 70%;
+  border-radius: 5px;
+  font-size: 15px;
+  position: static;
+  border-color: rgb(104, 100, 104)
+}
+
+#form textarea {
+  font-family: Arial, Helvetica, sans-serif;
   width: 100%;
   margin-bottom: 10px;
   background-color: #ffffff;
@@ -211,6 +227,7 @@ header {
   position: static;
   width: 50%;
   padding: 5px;
+  cursor: pointer;
   border-color: rgb(104, 100, 104)
 }
 
