--- a/Index.css
+++ b/Index.css
@@ -127,7 +127,6 @@ header {
   font-family: Georgia, 'Times New Roman', Times, serif;
   background-color: rgb(170, 129, 170);
   display: flex;
-  flex: 1;
   flex-direction: row;
   gap: 60px;
   /* Ridotto il gap per migliorare la responsività */
@@ -140,14 +139,12 @@ header {
 #testo1 {
   font-family: Georgia, 'Times New Roman', Times, serif;
   display: flex; 
-  flex: 1; 
   flex-direction: column;
 }
 
 #foto1 {
   width: 400px;
   height: 225px;
-  flex: 2;
 }
 
 .container {
@@ -164,13 +161,11 @@ header {
 #foto2 {
   width: 400px;
   height: 225px;
-  flex: 2;
 }
 
 #foto3 {
   width: 185px;
   height: 300px;
-  flex: 2;
 }
 
 .info {
@@ -333,6 +328,58 @@ margin: 20px;
     padding: 10px 5%;
     gap: 20px;
   }
+
+  .progetti {
+    text-align: center;
+    background-color: rgb(235, 230, 230);
+    font-family: Georgia, 'Times New Roman', Times, serif;
+  }
+  
+  #eden {
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    background-color: rgb(170, 129, 170);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 60px;
+    /* Ridotto il gap per migliorare la responsività */
+    padding-left: 20%;
+    /* Ridotto il padding per migliorare la responsività */
+    padding-right: 20%;
+    /* Ridotto il padding per migliorare la responsività */
+  }
+  
+  #testo1 {
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    display: flex; 
+    flex-direction: column;
+  }
+  
+  #foto1 {
+    max-width: 100%;
+    height: auto;
+  }
+  
+  .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 100px;
+    padding-left: 10%;
+    padding-right: 10%;
+    padding-bottom: 10px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+  }
+  
+  #foto2 {
+    max-width: 100%;
+    height: auto;
+  }
+  
+  #foto3 {
+    max-width: 100%;
+    height: auto;
+  }
 }
 
 
@@ -352,11 +399,55 @@ margin: 20px;
     max-width: 100%;
   }
 
-  .project, .project-images {
+  .progetti {
+    text-align: center;
+    background-color: rgb(235, 230, 230);
+    font-family: Georgia, 'Times New Roman', Times, serif;
+  }
+  
+  #eden {
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    background-color: rgb(170, 129, 170);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 60px;
+    /* Ridotto il gap per migliorare la responsività */
+    padding-left: 20%;
+    /* Ridotto il padding per migliorare la responsività */
+    padding-right: 20%;
+    /* Ridotto il padding per migliorare la responsività */
+  }
+  
+  #testo1 {
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    display: flex; 
     flex-direction: column;
   }
-
-  .project-images img {
-    max-width: 100px;
+  
+  #foto1 {
+    max-width: 100%;
+    height: auto;
+  }
+  
+  .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 100px;
+    padding-left: 10%;
+    padding-right: 10%;
+    padding-bottom: 10px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+  }
+  
+  #foto2 {
+    max-width: 100%;
+    height: auto;
+  }
+  
+  #foto3 {
+    max-width: 100%;
+    height: auto;
   }
 }
