--- a/Index.css
+++ b/Index.css
@@ -19,6 +19,7 @@ header {
   padding: 10px;
   align-items: center;
   position:relative;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 #logo {
@@ -106,6 +107,7 @@ header {
   flex-direction: row;
   align-items: center;
   gap: 50px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
@@ -116,10 +118,12 @@ header {
 }
 
 
+
 .progetti {
   text-align: center;
   padding-top: 8px;
   background-color: rgb(235, 230, 230);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
@@ -173,14 +177,12 @@ header {
   background-color: rgb(170, 129, 170);
   display: flex;
   flex-direction: row;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   align-items: center;
   gap: 200px;
-  /* Ridotto il gap per migliorare la responsività */
   padding-left: 20%;
-  /* Ridotto il padding per migliorare la responsività */
   padding-right: 20%;
-  /* Ridotto il padding per migliorare la responsività */
-}
+ }
 
 .info a {
   color: rgb(0, 0, 0);
