--- a/Index.css
+++ b/Index.css
@@ -149,6 +149,7 @@ header {
 #foto1 {
   width: 400px;
   height: 225px;
+  
 }
 
 .container {
@@ -355,6 +356,10 @@ margin: 20px;
     flex-direction: column;
   }
   
+  #testo2 {
+    order: -1;
+  } 
+
   #foto1 {
     max-width: 100%;
     height: auto;
@@ -434,6 +439,10 @@ margin: 20px;
     padding-left: 10%;
     padding-right: 10%;
     font-family: Georgia, 'Times New Roman', Times, serif;
+  }
+
+  #testo2 {
+    order: -1;
   }
   
   #foto2 {
