--- a/Index.css
+++ b/Index.css
@@ -82,8 +82,9 @@ header {
   width: 337px;
   height: auto;
   padding-top: 4%;
-}
 
+  
+}
 
 
 .progetti {
@@ -217,6 +218,9 @@ margin: 20px;
 .button {
   display: inline-block;
   padding: 10px 20px;
+  position: fixed;
+  top: 92%;
+  left: 65%;
   background-color: #130311;
   color: white;
   cursor: pointer;
@@ -227,7 +231,6 @@ margin: 20px;
 
 #popup {
   position: fixed;
-
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -279,7 +282,7 @@ margin: 20px;
     flex-direction: column;
     width: 100%;
     text-align: center;
-    background-color: #333;
+  
     position: absolute;
     top: 60px;
     right: 0;
@@ -375,7 +378,7 @@ margin: 20px;
     margin-right: 20px;
     font-size: 30px;  
     color: white;
-    display: block;
+  
 }
 
 .nav-links {
@@ -383,7 +386,7 @@ margin: 20px;
     flex-direction: column;
     width: 100%;
     text-align: center;
-    background-color: #333;
+    
     position: absolute;
     top: 60px;
     right: 0;
