--- a/Index.css
+++ b/Index.css
@@ -82,8 +82,6 @@ header {
   width: 337px;
   height: auto;
   padding-top: 4%;
-
-  
 }
 
 
@@ -95,15 +93,6 @@ header {
   font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
-#eden {
-  font-family: Georgia, 'Times New Roman', Times, serif;
-  background-color: rgb(170, 129, 170);
-  display: flex;
-  flex-direction: row;
-  gap: 60px;
-  padding-left: 20%;
-  padding-right: 20%;
-}
 
 #testo1 {
   font-family: Georgia, 'Times New Roman', Times, serif;
@@ -282,7 +271,6 @@ margin: 20px;
     flex-direction: column;
     width: 100%;
     text-align: center;
-  
     position: absolute;
     top: 60px;
     right: 0;
@@ -311,17 +299,7 @@ margin: 20px;
     background-color: rgb(235, 230, 230);
     font-family: Georgia, 'Times New Roman', Times, serif;
   }
-  
-  #eden {
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    background-color: rgb(170, 129, 170);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 60px;
-    padding-left: 20%;
-    padding-right: 20%;
-  }
+
   
   #testo1 {
     font-family: Georgia, 'Times New Roman', Times, serif;
@@ -342,7 +320,7 @@ margin: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 100px;
+    gap: 10px;
     padding-left: 10%;
     padding-right: 10%;
     font-family: Georgia, 'Times New Roman', Times, serif;
@@ -413,16 +391,7 @@ margin: 20px;
     font-family: Georgia, 'Times New Roman', Times, serif;
   }
   
-  #eden {
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    background-color: rgb(170, 129, 170);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 60px;
-    padding-left: 20%;
-    padding-right: 20%;
-  }
+
   
   #testo1 {
     font-family: Georgia, 'Times New Roman', Times, serif;
@@ -439,7 +408,7 @@ margin: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 100px;
+    gap: 10px;
     padding-left: 10%;
     padding-right: 10%;
     font-family: Georgia, 'Times New Roman', Times, serif;
@@ -457,5 +426,6 @@ margin: 20px;
   #foto3 {
     max-width: 100%;
     height: auto;
+    padding-bottom: 10px;
   }
 }
