--- a/Index.css
+++ b/Index.css
@@ -64,7 +64,7 @@ header {
 }
 
 .chisono {
-  background-color: rgb(235, 230, 230);
+  background-color: rgba(188, 158, 192, 0.678);
   text-align: right;
   padding-right: 7%;
   padding-left: 10%;
@@ -131,11 +131,11 @@ header {
   background-color: rgb(170, 129, 170);
   display: flex;
   flex-direction: row;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   align-items: center;
   gap: 200px;
   padding-left: 20%;
   padding-right: 20%;
+box-shadow : 0 4px 8px rgba(0, 0, 0, 0.2);
  }
 
 .info a {
@@ -352,10 +352,12 @@ img {vertical-align: middle;}
     margin: 10px 0;
     padding: 10px;
     width: 100%;
+   
 }
 
 .nav-links.active {
     display: flex; /* Show nav links when active */
+    
 }
 
 
@@ -397,10 +399,7 @@ img {vertical-align: middle;}
     padding-right: 10%;
     font-family: Georgia, 'Times New Roman', Times, serif;
   }
-  
-  .prev, .next,.text {font-size: 11px}
-}
-  
+
   #foto2 {
     max-width: 100%;
     height: auto;
@@ -410,6 +409,10 @@ img {vertical-align: middle;}
     max-width: 100%;
     height: auto;
   }
+  .prev, .next,.text {font-size: 11px}
+}
+  
+ 
 }
 
 
@@ -452,20 +455,20 @@ img {vertical-align: middle;}
 }
 
 .nav-links.active {
-    display: flex; /* Show nav links when active */
+  display: flex; /* Show nav links when active */
 }
 
 
 
-  .chisono img {
-    max-width: 100%;
-  }
+.chisono img {
+  max-width: 100%;
+}
 
-  .progetti {
-    text-align: center;
-    background-color: rgb(235, 230, 230);
-    font-family: Georgia, 'Times New Roman', Times, serif;
-  }
+.progetti {
+  text-align: center;
+  background-color: rgb(235, 230, 230);
+  font-family: Georgia, 'Times New Roman', Times, serif;
+}
   
 
   
