--- a/Index.css
+++ b/Index.css
@@ -54,6 +54,7 @@ header {
   display: flex;
   list-style: none;
   margin-left: auto;
+
 }
 
 .nav-links a {
@@ -433,7 +434,7 @@ img {vertical-align: middle;}
   .prev, .next,.text {font-size: 11px}
 }
  
-
+}
 
 
 @media (max-width: 480px) {
