--- a/Index.css
+++ b/Index.css
@@ -269,6 +269,10 @@ margin: 20px;
 .mySlides {display: none}
 img {vertical-align: middle;}
 
+.mySlides2 {display: none}
+img {vertical-align: middle;}
+
+
 /* Slideshow container */
 .slideshow-container {
   max-width: 1000px;
@@ -322,6 +326,18 @@ img {vertical-align: middle;}
   display: inline-block;
   transition: background-color 0.6s ease;
 }
+
+.dot2 {
+  cursor: pointer;
+  height: 8px;
+  width: 8px;
+  margin: 0 2px;
+  background-color: #270921;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
 
 .active, .dot:hover {
   background-color: #a79a9a;
