--- a/Index.css
+++ b/Index.css
@@ -109,6 +109,13 @@ header {
   text-align: left;
 }
 
+#testo1 h2 {
+  font-family: "Playfair Display", serif;
+  font-optical-sizing: auto;
+  font-weight: 600;
+  font-style: italic;
+}
+
 #foto1 {
   width: 400px;
   height: 225px;
@@ -132,6 +139,13 @@ header {
 
 #testo2 {
   text-align: right;
+}
+
+#testo2 h2 {
+  font-family: "Playfair Display", serif;
+  font-optical-sizing: auto;
+  font-weight: 600;
+  font-style: italic;
 }
 
 #foto3 {
